--- a/projects/mona-ui/src/lib/layout/modules/stepper/components/stepper/stepper.component.scss
+++ b/projects/mona-ui/src/lib/layout/modules/stepper/components/stepper/stepper.component.scss
@@ -2,14 +2,15 @@ div.mona-stepper {
     position: relative;
     width: auto;
     display: grid;
+    &.vertical {
+        height: 100%;
+    }
 }
 
 ol.mona-stepper-step-list {
     position: absolute;
     display: flex;
     list-style: none;
-    width: 100%;
-    grid-column: 1 / -1;
     & li {
         display: flex;
         align-items: center;
@@ -17,7 +18,6 @@ ol.mona-stepper-step-list {
         flex: 1 0 auto;
         & a {
             display: flex;
-            flex-direction: column;
             width: 100%;
             align-items: center;
             z-index: 1;
@@ -31,7 +31,7 @@ ol.mona-stepper-step-list {
                 background-color: var(--mona-background);
                 border: 1px solid var(--mona-border-color);
                 color: var(--mona-text);
-                transition: background-color 50ms ease-in-out, color 50ms ease-in-out;
+                transition: background-color 150ms ease-out, color 150ms ease-out;
                 &.mona-active {
                     background-color: var(--mona-primary);
                 }
@@ -42,19 +42,56 @@ ol.mona-stepper-step-list {
             }
         }
     }
+    &.horizontal {
+        grid-column: 1 / -1;
+        flex-direction: row;
+        width: 100%;
+        & > li {
+            & > a:first-child {
+                flex-direction: column;
+                row-gap: 5px;
+            }
+        }
+    }
+    &.vertical {
+        grid-row: 1 / -1;
+        flex-direction: column;
+        height: 100%;
+        width: max-content;
+        left: calc(-1 * (calc(calc(var(--mona-input-height) - 8px) / 2)));
+        & > li {
+            & > a:first-child {
+                flex-direction: row;
+                column-gap: 5px;
+            }
+        }
+    }
 }
 
 div.mona-stepper-track {
     position: relative;
-    height: 8px;
     display: grid;
-    top: calc(calc(var(--mona-input-height) - 8px) / 2);
     background-color: var(--mona-background);
     border: 1px solid var(--mona-border-color);
     & > div {
-        height: 100%;
         position: absolute;
         background-color: var(--mona-primary);
-        transition: width 50ms ease-in-out;
+    }
+    &.horizontal {
+        width: 100%;
+        height: 8px;
+        top: calc(calc(var(--mona-input-height) - 8px) / 2);
+        & > div {
+            height: 100%;
+            transition: width 150ms ease-in-out;
+        }
+    }
+    &.vertical {
+        height: 100%;
+        width: 8px;
+        & > div {
+            width: 100%;
+            transition: height 150ms ease-in-out;
+        }
     }
 }
