--- a/projects/mona-ui/src/lib/layout/modules/stepper/components/stepper/stepper.component.scss
+++ b/projects/mona-ui/src/lib/layout/modules/stepper/components/stepper/stepper.component.scss
@@ -2,7 +2,8 @@ div.mona-stepper {
     position: relative;
     width: auto;
     display: grid;
-    &.vertical {
+    outline: none;
+    &-vertical {
         height: 100%;
     }
 }
@@ -16,12 +17,12 @@ ol.mona-stepper-step-list {
         align-items: center;
         justify-content: center;
         flex: 1 0 auto;
-        & a {
+        & div {
             display: flex;
             width: 100%;
             align-items: center;
             z-index: 1;
-            text-decoration: none;
+            cursor: pointer;
             & > span:first-child {
                 width: var(--mona-input-height);
                 height: var(--mona-input-height);
@@ -32,35 +33,35 @@ ol.mona-stepper-step-list {
                 border: 1px solid var(--mona-border-color);
                 color: var(--mona-text);
                 transition: background-color 150ms ease-out, color 150ms ease-out;
-                &.mona-active {
+                &.mona-stepper-step-active {
                     background-color: var(--mona-primary);
                 }
             }
             & > span:last-child {
                 color: var(--mona-text);
-                transition: color 50ms ease-in-out;
+                transition: color 150ms ease-in-out;
             }
         }
     }
-    &.horizontal {
+    &-horizontal {
         grid-column: 1 / -1;
         flex-direction: row;
         width: 100%;
         & > li {
-            & > a:first-child {
+            & > div:first-child {
                 flex-direction: column;
                 row-gap: 5px;
             }
         }
     }
-    &.vertical {
+    &-vertical {
         grid-row: 1 / -1;
         flex-direction: column;
         height: 100%;
         width: max-content;
         left: calc(-1 * (calc(calc(var(--mona-input-height) - 8px) / 2)));
         & > li {
-            & > a:first-child {
+            & > div:first-child {
                 flex-direction: row;
                 column-gap: 5px;
             }
@@ -77,7 +78,7 @@ div.mona-stepper-track {
         position: absolute;
         background-color: var(--mona-primary);
     }
-    &.horizontal {
+    &-horizontal {
         width: 100%;
         height: 8px;
         top: calc(calc(var(--mona-input-height) - 8px) / 2);
@@ -86,7 +87,7 @@ div.mona-stepper-track {
             transition: width 150ms ease-in-out;
         }
     }
-    &.vertical {
+    &-vertical {
         height: 100%;
         width: 8px;
         & > div {
