Start implementing date input components

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -87,6 +87,10 @@
                             </div>
 
                             <div>
+                                <mona-date-time-picker style="width: 300px;"></mona-date-time-picker>
+                            </div>
+
+                            <div>
                                 <button monaButton [disabled]="false" [toggleable]="true" #contextMenuAnchor>
                                     <span style="color: lightcoral;">Context Menu Target</span>
                                 </button>
