--- a/projects/mona-ui/src/lib/date-inputs/modules/date-time-picker/components/date-time-picker/date-time-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/modules/date-time-picker/components/date-time-picker/date-time-picker.component.html
@@ -1,5 +1,10 @@
 <div class="mona-date-time-picker">
-    <mona-text-box [ngModel]="currentDateString">
+    <mona-text-box [ngModel]="currentDateString" (ngModelChange)="onDateStringEdit($event)" (inputBlur)="onDateInputBlur()">
+        <ng-container *ngIf="currentDateInvalid">
+            <ng-template monaTextBoxSuffixTemplate>
+                <fa-icon [icon]="wrongDateIcon" style="color: crimson;"></fa-icon>
+            </ng-template>
+        </ng-container>
         <ng-template monaTextBoxSuffixTemplate>
             <button monaButton [flat]="true" #dateMenuButton (click)="onDateInputButtonClick($event)">
                 <fa-icon [icon]="dateIcon"></fa-icon>
@@ -17,7 +22,7 @@
                 </button>
             </div>
             <div>
-                <button monaButton>{{navigatedDate|date:'MMMM YYYY'}}</button>
+                <button monaButton>{{navigatedDate|date:'MMMM yyyy':timezone}}</button>
             </div>
             <div>
                 <button monaButton (click)="onMonthNavigationClick('next')">
@@ -39,32 +44,38 @@
             </thead>
             <tbody>
                 <tr>
-                    <td *ngFor="let entry of monthlyViewDict | monaSlice:0:7" (click)="onDayClick(entry.key)">
+                    <td *ngFor="let entry of monthlyViewDict | monaSlice:0:7" (click)="onDayClick(entry.key)"
+                        [ngClass]="{'mona-calendar-other-month': entry.key|monaDateComparer:monthBounds.start:'<', 'mona-selected':entry.key|monaDateComparer:value:'=='}">
                         <span>{{entry.value}}</span>
                     </td>
                 </tr>
                 <tr>
-                    <td *ngFor="let entry of monthlyViewDict | monaSlice:7:14" (click)="onDayClick(entry.key)">
+                    <td *ngFor="let entry of monthlyViewDict | monaSlice:7:14" (click)="onDayClick(entry.key)"
+                        [ngClass]="{'mona-selected':entry.key|monaDateComparer:value:'=='}">
                         <span>{{entry.value}}</span>
                     </td>
                 </tr>
                 <tr>
-                    <td *ngFor="let entry of monthlyViewDict | monaSlice:14:21" (click)="onDayClick(entry.key)">
+                    <td *ngFor="let entry of monthlyViewDict | monaSlice:14:21" (click)="onDayClick(entry.key)"
+                        [ngClass]="{'mona-selected':entry.key|monaDateComparer:value:'=='}">
                         <span>{{entry.value}}</span>
                     </td>
                 </tr>
                 <tr>
-                    <td *ngFor="let entry of monthlyViewDict | monaSlice:21:28" (click)="onDayClick(entry.key)">
+                    <td *ngFor="let entry of monthlyViewDict | monaSlice:21:28" (click)="onDayClick(entry.key)"
+                        [ngClass]="{'mona-selected':entry.key|monaDateComparer:value:'=='}">
                         <span>{{entry.value}}</span>
                     </td>
                 </tr>
                 <tr>
-                    <td *ngFor="let entry of monthlyViewDict | monaSlice:28:35" (click)="onDayClick(entry.key)">
+                    <td *ngFor="let entry of monthlyViewDict | monaSlice:28:35" (click)="onDayClick(entry.key)"
+                        [ngClass]="{'mona-calendar-other-month':entry.key|monaDateComparer:monthBounds.end:'>', 'mona-selected':entry.key|monaDateComparer:value:'=='}">
                         <span>{{entry.value}}</span>
                     </td>
                 </tr>
                 <tr>
-                    <td *ngFor="let entry of monthlyViewDict | monaSlice:35:monthlyViewDict.length" (click)="onDayClick(entry.key)">
+                    <td *ngFor="let entry of monthlyViewDict | monaSlice:35:monthlyViewDict.length" (click)="onDayClick(entry.key)"
+                        [ngClass]="{'mona-calendar-other-month': entry.key|monaDateComparer:monthBounds.end:'>', 'mona-selected':entry.key|monaDateComparer:value:'=='}">
                         <span>{{entry.value}}</span>
                     </td>
                 </tr>
