Year and decade views

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -87,7 +87,7 @@
                             </div>
 
                             <div>
-                                <mona-date-time-picker style="width: 300px;"></mona-date-time-picker>
+                                <mona-date-time-picker format="d/M/yyyy" style="width: 300px;"></mona-date-time-picker>
                             </div>
 
                             <div>
