--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -317,6 +317,10 @@ mona-button-group button[monaButton] {
             }
         }
     }
+}
+
+/** Time Selector */
+div.mona-time-selector {
     & mona-numeric-text-box {
         & input {
             text-align: center;
