Reorganize and cleanup

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -87,7 +87,7 @@
                             </div>
 
                             <div>
-                                <mona-date-time-picker format="dd/MM/yyyy hh:mm:ss a" style="width: 250px; margin-right: 20px;"
+                                <mona-date-time-picker format="dd/MM/yyyy hh:mm a" style="width: 250px; margin-right: 20px;"
                                                        [value]="dateTimePickerValue" hourFormat="12"
                                                        (valueChange)="onDateTimePickerValueChange($event)"></mona-date-time-picker>
                                 <mona-date-picker format="d/M/yyyy" style="width: 250px;" [value]="dateTimePickerValue"></mona-date-picker>
