Options for readonly and disabled

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -88,10 +88,10 @@
 
                             <div>
                                 <mona-date-time-picker format="dd/MM/yyyy hh:mm a" style="width: 250px; margin-right: 20px;"
-                                                       [value]="dateTimePickerValue" hourFormat="12"
+                                                       [value]="dateTimePickerValue" hourFormat="12" [readonly]="false"
                                                        (valueChange)="onDateTimePickerValueChange($event)"></mona-date-time-picker>
-                                <mona-date-picker format="d/M/yyyy" style="width: 250px;" [value]="dateTimePickerValue"></mona-date-picker>
-                                <mona-time-selector [value]="dateTimePickerValue" hourFormat="12"></mona-time-selector>
+                                <mona-date-picker format="d/M/yyyy" style="width: 250px;" [value]="dateTimePickerValue" [readonly]="false"></mona-date-picker>
+                                <mona-time-selector [value]="dateTimePickerValue" hourFormat="12" [readonly]="true" [disabled]="false"></mona-time-selector>
                             </div>
 
                             <div>
