--- a/projects/mona-ui/src/lib/date-inputs/modules/time-selector/components/time-selector/time-selector.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/modules/time-selector/components/time-selector/time-selector.component.html
@@ -1,15 +1,15 @@
-<div class="mona-time-selector">
+<div class="mona-time-selector" [ngClass]="{'mona-disabled':disabled}">
     <div style="display: flex; flex-direction: column;">
-        <mona-numeric-text-box [(ngModel)]="hour" [min]="-1" [max]="hourFormat==='12' ? 13 : 24"></mona-numeric-text-box>
+        <mona-numeric-text-box [readonly]="readonly" [(ngModel)]="hour" [min]="-1" [max]="hourFormat==='12' ? 13 : 24" [disabled]="disabled"></mona-numeric-text-box>
     </div>
     <div>
         <span>:</span>
     </div>
     <div>
-        <mona-numeric-text-box [(ngModel)]="minute" [min]="-1" [max]="60"></mona-numeric-text-box>
+        <mona-numeric-text-box [readonly]="readonly" [(ngModel)]="minute" [min]="-1" [max]="60" [disabled]="disabled"></mona-numeric-text-box>
     </div>
     <div *ngIf="hourFormat==='12'">
-        <mona-button-group>
+        <mona-button-group [disabled]="disabled">
             <button monaButton [selected]="meridiem==='AM'" (click)="onMeridiemClick('AM')">AM</button>
             <button monaButton [selected]="meridiem==='PM'" (click)="onMeridiemClick('PM')">PM</button>
         </mona-button-group>
