Time selector values is now set to default if value is empty

--- a/projects/mona-ui/src/lib/date-inputs/modules/time-selector/components/time-selector/time-selector.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/modules/time-selector/components/time-selector/time-selector.component.html
@@ -1,12 +1,16 @@
 <div class="mona-time-selector" [ngClass]="{'mona-disabled':disabled}">
     <div style="display: flex; flex-direction: column;">
-        <mona-numeric-text-box [readonly]="readonly" [value]="hour" (valueChange)="onHourChange($event)" [min]="-1" [max]="hourFormat==='12' ? 13 : 24" [disabled]="disabled"></mona-numeric-text-box>
+        <mona-numeric-text-box [readonly]="readonly" [value]="hour" (valueChange)="onHourChange($event)"
+                               (inputBlur)="onHourBlur($event)"
+                               [min]="-1" [max]="hourFormat==='12' ? 13 : 24" [disabled]="disabled"></mona-numeric-text-box>
     </div>
     <div>
         <span>:</span>
     </div>
     <div>
-        <mona-numeric-text-box [readonly]="readonly" [value]="minute" (valueChange)="onMinuteChange($event)" [min]="-1" [max]="60" [disabled]="disabled"></mona-numeric-text-box>
+        <mona-numeric-text-box [readonly]="readonly" [value]="minute" (valueChange)="onMinuteChange($event)"
+                               (inputBlur)="onMinuteBlur($event)"
+                               [min]="-1" [max]="60" [disabled]="disabled"></mona-numeric-text-box>
     </div>
     <div *ngIf="hourFormat==='12'">
         <mona-button-group [disabled]="disabled">
